# sage

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.ja.md  README.md  TODO.md  high-level-design.md  pyproject.toml
.githooks/: pre-commit  pre-push
cmd/: analysis_api.py  annotate_actor.py  create_ir_template.py  init_schema.py  load_assets.py  load_identity_assets.py  load_user_accounts.py  query_attack_paths.py  register_incident.py  report_choke_points.py  run_etl.py  setup_emulator.py  sync_caldera.py  visualize_attack_flow.py  visualize_combined.py  visualize_graph.py
docs/: README.ja.md  README.md  analyst-guide.ja.md  analyst-guide.md  api-stability.ja.md  api-stability.md  data-model.ja.md  data-model.md  dependencies.ja.md  dependencies.md  deploy.ja.md  deploy.md  ir-feedback-flow.ja.md  ir-feedback-flow.md  local-testing.ja.md  local-testing.md  setup.ja.md  setup.md  structure.ja.md  structure.md  usage.ja.md  usage.md
docs/ja/: analyst-guide.md  data-model.md  dependencies.md  local-testing.md  setup.md  structure.md
schema/: spanner_ddl.sql  sqlite_ddl.sql
src/sage/: config.py
src/sage/analysis/: similarity.py  ttp_asset_matcher.py
src/sage/api/: annotation.py  app.py  auth.py  incidents.py  models.py  threat_summary.py  windows.py
src/sage/caldera/: client.py
src/sage/cli/: __init__.py  analysis_api.py  annotate_actor.py  create_ir_template.py  init_schema.py  load_assets.py  load_identity_assets.py  load_user_accounts.py  navigator_loader.py  query_attack_paths.py  register_incident.py  report_choke_points.py  run_etl.py  setup_emulator.py  sync_caldera.py  visualize_attack_flow.py  visualize_combined.py  visualize_graph.py
src/sage/db/: __init__.py
src/sage/etl/: worker.py
src/sage/models/: annotation.py  incident_request.py
src/sage/notify/: github.py  slack.py
src/sage/opencti/: client.py
src/sage/pir/: filter.py  ingest.py
src/sage/spanner/: annotations.py  client.py  constants.py  incidents.py  query.py  upsert.py
src/sage/spanner/migrations/: 20260522_120000_actor_rationale.sql
src/sage/sqlite/: __init__.py  annotations.py  client.py  incidents.py  query.py  upsert.py
src/sage/stix/: export.py  mapper.py  parser.py
src/sage/storage/: __init__.py  backend.py  gcs.py  local.py
tests/: conftest.py  test_annotation.py  test_annotation_api.py  test_api.py  test_api_extract.py  test_api_incidents.py  test_api_threat_summary.py  test_caldera.py  test_cli.py  test_config.py  test_db_dispatch.py  test_etl_window.py  test_extract_indicators.py  test_init_schema.py  test_load_assets.py  test_mapper.py  test_navigator_loader.py  test_notify.py  test_parser.py  test_pir_filter.py  test_pir_ingest_actor.py  test_query_temporal.py  test_register_incident_cli.py  test_similarity.py  test_spanner_query.py  test_sqlite_annotations.py  test_sqlite_incidents.py  test_sqlite_query.py  test_sqlite_roundtrip.py  test_sqlite_upsert.py  test_stix_export.py  test_storage.py  test_ttp_asset_matcher.py  test_upsert_has_access.py  test_upsert_initiative_c.py  test_worker.py
tests/fixtures/: navigator_layer_sample.json  sample_assets.json  sample_bundle.json  sample_bundle_inc.json  sample_bundle_mirrorface.json  sample_bundle_roundtrip.json  sample_pir.json  sample_pir_actors.json  synthetic_trace_has_access_bundle.json  synthetic_trace_user_account_bundle.json
tests/fixtures/initiative_c/: spec_compliant_bundle.json
