[project]
name = "sage"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "stix2>=3.0.1",
    "pycti>=6.3.0",
    "google-cloud-spanner>=3.49.0",
    "google-cloud-storage>=2.18.0",
    "structlog>=24.4.0",
    "cryptography>=46.0.7",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "idna>=3.15",  # CVE-2026-45409 fix; transitive via anyio/httpx
    "starlette>=1.0.1",  # PYSEC-2026-161 fix; transitive via fastapi
    "pyjwt>=2.13.0",  # PYSEC-2026-175/177/178/179 fix; transitive via pycti
    "click>=8.1",  # cmd/register_incident.py Diamond Model CLI (Initiative G Phase 3)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
    "pip>=26.1",  # CVE-2026-6357 fix; transitive via pip-audit -> pip-api
    "pyvis>=0.3.2",
    "httpx>=0.27.0",
]

# Initiative H Phase 6 (SAGE 1.0.0) — unified ``sage`` entry; legacy
# ``python -m cmd.<name>`` invocations were removed in SAGE 2.0.0.
[project.scripts]
sage = "sage.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
