[project]
name = "sage"
version = "4.0.3"
requires-python = ">=3.12"
dependencies = [
    "stix2>=3.0.1",
    "pycti>=6.3.0",
    "google-cloud-spanner>=3.49.0",
    "google-cloud-storage>=2.18.0",
    "structlog>=24.4.0",
    "cryptography>=48.0.1",  # GHSA-537c-gmf6-5ccf fix; transitive
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "idna>=3.18",  # httpx2 requires idna>=3.18; includes CVE-2026-45409 fix (3.15); transitive via anyio/httpx2
    "starlette>=1.3.1",  # CVE-2026-48817/-48818/-54282/-54283 fix; transitive via fastapi
    "pyjwt>=2.13.0",  # PYSEC-2026-175/177/178/179 fix; transitive via pycti
    "click>=8.1",  # cmd/register_incident.py Diamond Model CLI (Initiative G Phase 3)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
    "pip>=26.1.2",  # PYSEC-2026-196 + CVE-2026-6357 fix; transitive via pip-audit -> pip-api
    "msgpack>=1.2.1",  # GHSA-6v7p-g79w-8964 fix; transitive via pip-audit -> cachecontrol
    "pyvis>=0.3.2",
    "httpx2>=2.4.0",
]

# Initiative H Phase 6 (SAGE 1.0.0) — unified ``sage`` entry; legacy
# ``python -m cmd.<name>`` invocations were removed in SAGE 2.0.0.
[project.scripts]
sage = "sage.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
